original ncurses impl works with wrapper

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -20,16 +20,16 @@ endif()
 
 if (IMTUI_SUPPORT_NCURSES)
     add_subdirectory(ncurses0)
-    add_subdirectory(slack)
+  #add_subdirectory(slack)
 
-    if (IMTUI_SUPPORT_CURL)
-        if (IMTUI_SUPPORT_CURL)
-            find_package(CURL REQUIRED)
-            if (MINGW)
-                set(CURL_LIBRARIES curl)
-            endif()
-        endif()
-
-        add_subdirectory(hnterm)
-    endif()
+#    if (IMTUI_SUPPORT_CURL)
+#        if (IMTUI_SUPPORT_CURL)
+#            find_package(CURL REQUIRED)
+#            if (MINGW)
+#                set(CURL_LIBRARIES curl)
+#            endif()
+#        endif()
+#
+#        add_subdirectory(hnterm)
+#    endif()
 endif()
