--- a/examples/slack/CMakeLists.txt
+++ b/examples/slack/CMakeLists.txt
@@ -34,7 +34,7 @@ else()
         )
 
     target_link_libraries(${TARGET} PRIVATE
-        imtui-ncurses
+        imtui-xcurses
         imtui-examples-common
         )
 endif()
