--- a/examples/ncurses0/CMakeLists.txt
+++ b/examples/ncurses0/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(imtui-example-ncurses0 main.cpp)
-target_include_directories(imtui-example-ncurses0 PRIVATE ..)
-target_link_libraries(imtui-example-ncurses0 PRIVATE imtui-ncurses imtui-examples-common)
+add_executable(imtui-example-xcurses0 main.cpp)
+target_include_directories(imtui-example-xcurses0 PRIVATE ..)
+target_link_libraries(imtui-example-xcurses0 PRIVATE imtui-xcurses imtui-examples-common)
